--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <div class="loveMessage" id="loveMessage">
     <p>heyy baby i just wanted to let you know how much i love you and i hope you have the greatest birthday possible but first i want you to know this, ever since the day we meet i had truly loved you and thought that you were a great person, every time i do something for you i do it purly from my heart because my feelings for you are pure and strong, i truly love you with all my heart and i trust you love me with yours and i truly hope that it could stay like that FOREVER.</p>
 
-    <p>You are my heart’s greatest treasure, i love every little thing about you – the way you care so deeply, the way you make everything feel so right. My love for you grows stronger with everyday and I can't imagine my life without you in it. I promise to always love you, support you, and be there for you, no matter what. You are my everything, and I am so lucky to call you mine. I know i say this a lot but, i love you, i love you, and I LOVE YOUUUU.</p>
+    <p>You are my heart’s greatest treasure, i love every little thing about you, the way you care so deeply, the way you make everything feel so right. My love for you grows stronger with everyday and I can't imagine my life without you in it. I promise to always love you, support you, and be there for you, no matter what. You are my everything, and I am so lucky to call you mine. I know i say this a lot but, i love you, i love you, and I LOVE YOUUUU.</p>
   </div>
 
   <script>
